--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,10 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
+}
+
+loom.runConfigs.configureEach {
+    it.ideConfigGenerated = true
 }
 
 processResources {
